<resources>
    <string name="app_name">Parcel Magic</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_name">Enter your name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading…</string>
    <string name="upload_your_photo_optional">Upload your photo (optional)</string>
    <string name="personal_information">Personal Information</string>
    <string name="toolbar">ToolBar</string>
    <string name="by_useing">By using Airposted, I agree to Airposted\'s</string>
    <string name="and">and</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="airposted_terms_of_condition">Airposted Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="webview">WebView</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="verification">Verification</string>
    <string name="account_settings">Account Settings</string>
    <string name="parcel_history">Order History</string>
    <string name="profile">Profile</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="terms_conditions_privacy"><![CDATA[Terms & Conditions / Privacy]]></string>
    <string name="sign_out">Sign Out</string>
    <string name="phone">Phone</string>
    <string name="bkash">Bkash</string>
    <string name="rokect">Rocket</string>
    <string name="update">Update</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="more">More</string>
    <string name="my_profile">My Profile</string>
    <string name="searching">Searching…</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="receiver_phone_number">Receiver Phone Number</string>
    <string name="additional_direction">Additional Direction(optional)</string>
    <string name="view_this_parcel">View This Parcel</string>

    <string name="enter">Enter verification code sent to \n</string>
    <string name="resend_code"> Resend Code</string>
    <string name="did_not_receive_the_code">Did not receive the code? </string>
    <string name="search_location">Search Receiver Location</string>
    <string name="not_now">Not Now</string>
    <string name="submit">Submit</string>
    <string name="confirm_delivery_request">Confirm Delivery Request</string>
    <string name="product">Product</string>
    <string name="gifts_electronic_food_accessories_etc">Gifts, Electronic, Food, Accessories, Etc....</string>
    <string name="house_43_road_1_block_i_banani_dhaka_1213">House # 43, Road# 1, Block #I, Banani, Dhaka-1213</string>
    <string name="receiver_apos_s_details">Receiver\'s Details</string>
    <string name="one_final_step">One Final Step</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="successful_order_text">Your request has been processed &amp; \nwill be delivered within 24 hour. \nYour tracking ID is #%1$s.</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="product_details">Product details</string>
    <string name="what_to_send">What to send</string>
    <string name="my_parcel">Ongoing Order</string>
    <string name="quick_delivery_on">Delivery within</string>
    <string name="the_dhaka_city">Dhaka city</string>
    <string name="quick">Regular</string>
    <string name="express">Express</string>
    <string name="package_guidline">Package guidline</string>
    <string name="for_a_successful_delivery_make_sure_your_package_is">For a successful delivery, make sure your package is :</string>
    <string name="got_it">Got it</string>
    <string name="securely_sealed_and_ready_for_curbside_pickup">• Securely sealed and ready for curbside pickup</string>
    <string name="_5_kg_or_less">• 5 kg or less</string>
    <string name="badol_mondal">Badol Mondal</string>
    <string name="saved_places">Saved Places</string>
    <string name="set_on_map">Set on map</string>
    <string name="where_s_it_going">Where\'s it going?</string>
    <string name="recent_order">Ongoing Order</string>

    <string name="delivery_charge">Delivery Charge</string>
    <string name="who_will_pay">Who will Pay</string>
    <string name="search">Search</string>

    <string-array name="delivery_type">
        <item>Express Delivery</item>
        <item>Regular Delivery</item>
    </string-array>

    <string-array name="parcel_quantity">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
    </string-array>

    <string name="demo">"1. How do I request for a delivery? -\tTo request a delivery, you will have to select Send Parcel from the App. Then, you will have to select your pickup and drop-off location, fill in detailed information about the receiver of the item and select any one of the predefined product categories which is closest to the item you are sending. Then you can review information before you request for a delivery pickup, after which Airposted Parcel can find the nearest deliverer around you and send them your way. 2. How do I contact a deliverer?  -\tAfter accepting your request, you will see the deliverers’ name, picture and user rating appear on your phone screen, along with a phone icon. Press the phone icon beside the contact number to call the deliverer.  3. How do I cancel a request? -\tYou can cancel the request up until the start of your delivery. To do this, you have to press “Cancel Request”  4. How do I track my delivery? -\tThere are three stages in tracking your delivery. After the deliverer accepts your requests, your phone screen will show “Request Accepted”. The delivery status will change to “In Transit” the moment the deliverer starts the request. When the deliverer has successfully delivered your item, the status will change to “Delivered”. All throughout, your phone screen will display a phone icon to call the deliverer. Press on the phone icon to call the deliverer if you wish to know detailed location of your deliverer. "</string>
    <string name="your_name">Your Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="envelope_size">Size: 8.5\" x 14\"</string>
    <string name="large_size">Size: 12\" x 12\" x 12\"</string>
    <string name="small_size">Size: 8\" x 8\" x 8\"</string>
    <string name="envelope_size1">8.5\"x14\"</string>
    <string name="large_size1">12\"x12\"x12\"</string>
    <string name="small_size1">8\"x8\"x8\"</string>
    <string name="sign_in_with_mobile_number">Sign in with mobile number</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancelled_order">Cancel Order</string>
    <string name="collected_order">Collected Order\'s</string>
    <string name="order_detaisl">Order Details</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="coupon">Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="apply_voucher">Apply a voucher</string>
    <string name="total">Total</string>
    <string name="apply_coupon">Apply a coupon</string>
    <string name="enter_your_coupon_code">Enter your coupon code</string>
</resources>