<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/my_parcel"
            android:icon="@drawable/ic_my_parcel_icon"
            android:title="@string/my_parcel" />

        <item
            android:id="@+id/collected_order"
            android:icon="@drawable/ic_my_parcel_icon"
            android:title="@string/collected_order" />

        <item
            android:id="@+id/cancel_order"
            android:icon="@drawable/ic_my_parcel_icon"
            android:title="@string/cancelled_order" />

        <item
            android:id="@+id/parcel_history"
            android:icon="@drawable/ic_parcel_history_icon"
            android:title="@string/parcel_history" />

        <!--<item
            android:id="@+id/profile"
            android:icon="@drawable/ic_user_icon"
            android:title="@string/profile" />-->

        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_information"
            android:title="@string/help" />

    </group>

    <group android:id="@+id/dummy"
        android:checkableBehavior="none">

        <item
            android:id="@+id/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/terms_condition"
            android:title="@string/terms_conditions_privacy" />

        <item
            android:id="@+id/sign_out"
            android:title="@string/sign_out" />

    </group>

</menu>