<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:context=".ui.create_parcel.ReceiverInfoFragment">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15sp"
                android:backgroundTint="#f3f3f3"
                app:cardCornerRadius="18dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="9dp"
                    android:src="@drawable/ic_keyboard_backspace" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15sp"
                android:background="@drawable/rounder_blue"
                android:drawableStart="@drawable/ic_search_white"
                android:drawablePadding="10dp"
                android:drawableTint="@color/white"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="Contacts"
                android:textColor="@color/white" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="5dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="Who is receiving the parcel?"
                    android:textColor="#1a1a1a"
                    android:textSize="32sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/poppins_medium"
                    android:lineSpacingExtra="12sp"
                    android:text="Full Name"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/input_back"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/receiver_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/receiver_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:textColor="#000"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:fontFamily="@font/poppins_medium"
                    android:lineSpacingExtra="12sp"
                    android:text="Phone Number"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:background="@drawable/input_back"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/country_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/poppins_regular"
                        android:lineSpacingExtra="5sp"
                        android:text="+880"
                        android:textColor="#56586d"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:background="#e2e5ff" />

                    <EditText
                        android:id="@+id/receiver_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/receiver_phone_number"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:textColor="#000"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/before_button_bg"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:padding="18dp"
                    android:text="@string/next"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>
